[package]
name = "firecore-font-builder"
version = "0.0.1"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"

[dependencies]

firecore-engine = { git = "https://github.com/fiirecore/engine", rev = "a147490" }

serde = { version = "1.0", features = ["derive"] }
ron = "0.6"
